--- a/vercel.json
+++ b/vercel.json
@@ -16,12 +16,9 @@
     },
     "app/api/branches/route.ts": {
       "maxDuration": 10
-    }
-  },
-  "env": {
-    "GITHUB_TOKEN": {
-      "description": "GitHub Personal Access Token (optional, for higher rate limits)",
-      "required": false
+    },
+    "app/api/pulls/route.ts": {
+      "maxDuration": 10
     }
   }
 }
