--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rgl-artifacts-viewer",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.x <=22.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
